--- a/_includes/stimuli/lilac_chaser.html
+++ b/_includes/stimuli/lilac_chaser.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container container-bamberg">
     <div class= "row">
-        <div class="col-md-8" align="center">
-            <canvas id="LilacChaser-Canvas" presentation_type= 'main' hidpi="off" width= "600" height= "600" style="background:#F3F3F3" align="center"></canvas>
+        <div class="col-md-8" style="text-align:center;">
+            <canvas id="LilacChaser-Canvas" presentation_type= 'main' hidpi="off" width= "600" height= "600" style="background:#F3F3F3; text-align:center;"></canvas>
         </div>
         <div class="col-md-4 well">
             <label for="chaser_rpm" class="form-label">Rotation speed (rpm)</label>
-            <input type="range" class="form-range range-bamberg" id="chaser_rpm" min="1" max="60" default="30">
+            <input type="range" class="form-range range-bamberg" id="chaser_rpm" min="1" max="60" value="30">
 
 
             <div class="form-check form-switch">
