--- a/_includes/stimuli/sfs.html
+++ b/_includes/stimuli/sfs.html
@@ -1,8 +1,8 @@
 <!-- Shape from shading -->
-<div class="container">
+<div class="container container-bamberg ">
     <div class= "row">
-        <div class="col-md-8" align="center">
-            <canvas id="SFS-Canvas" presentation_type= 'main' hidpi="off" width= "600" height= "600" style="background:grey" align="center"></canvas>
+        <div class="col-md-8" style="text-align:center;">
+            <canvas id="SFS-Canvas" presentation_type= 'main' hidpi="off" width= "600" height= "600" style="background:grey; text-align:center;"></canvas>
         </div>
         <div class="col-md-4 well">
             <button type="button" class="btn btn-bamberg" id="sfs_flip" onclick="flipAll()" >Flip all</button>
