--- a/_includes/template/head.html
+++ b/_includes/template/head.html
@@ -4,11 +4,11 @@
 <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 {% if site.description %}<meta name="description" content="{{ site.description }}">{% endif %}
 {% if site.author %}<meta name="author" content="{{ site.author }}">{% endif %}
-<!-- built with bootstrap5-template https://github.com/thecdil/bootstrap5-template -->
-<meta name="generator" content="thecdil/bootstrap5-template">
-<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 
-<link rel="stylesheet" href="{{ '/assets/lib/bootstrap.min.css' | relative_url }}">
+<meta name="generator" content="thecdil/bootstrap5-template">
+<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.png' | relative_url }}">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 {% if page.head %}{% include {{ page.head }} %}{% endif %}
 {% if layout.head %}{% include {{ layout.head }} %}{% endif %}
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" type="text/css">
