Capitilized JS filename

--- a/_includes/stimuli/kde.html
+++ b/_includes/stimuli/kde.html
@@ -41,4 +41,4 @@
 </div>
 
 <script src="{{ '/assets/js/numeric.js' | relative_url }}"></script>
-<script src="{{ '/assets/stimuli/js/kde.js' | relative_url }}"></script>
+<script src="{{ '/assets/stimuli/js/KDE.js' | relative_url }}"></script>
